# manga-create-api-docs

./: .editorconfig  .gitignore  .prettierrc  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
about/: index.html
assets/styles/: extra.css
code-examples/: index.html
docs/: about.md  code-examples.md  index.md
docs/getting-started/: index.md  routes.md
docs/styles/: extra.css
getting-started/: index.html
getting-started/routes/: index.html
